--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body {
 /* --------------------------------- Editor part--------------------------------- */
 .editor-part,
 .previewer-part {
-    flex-basis: 50%;
+    width: 50%;
     overflow:hidden;
     position: relative;
 }
